--- a/index.html
+++ b/index.html
@@ -386,14 +386,18 @@
 </a>TikToker</h1>
 
 <p><a href="https://crystal-lang.org/"><img src="https://img.shields.io/badge/Crystal-1.0.0-%23333333" alt="Built with Crystal 0.36.1"/></a>
-<a href="https://github.com/kandayo/tiktoker/releases"><img src="https://img.shields.io/github/release/kandayo/tiktoker.svg?label=Release" alt="GitHub release"/></a></p>
+<a href="https://github.com/kandayo/tiktoker/releases"><img src="https://img.shields.io/github/release/kandayo/tiktoker.svg?label=Release" alt="GitHub release"/></a>
+<a href="https://github.com/kandayo/tiktoker/actions/workflows/ci.yml"><img src="https://github.com/kandayo/tiktoker/actions/workflows/ci.yml/badge.svg" alt="CI"/></a>
+<a href="https://github.com/kandayo/tiktoker/actions/workflows/docs.yml"><img src="https://github.com/kandayo/tiktoker/actions/workflows/docs.yml/badge.svg" alt="Documentation"/></a></p>
 
 <p>TikToker is a <strong>command-line client for TikTok</strong>. It allows you to search and
 browse users from the terminal, and to download videos and its metadata from an
 user profile or from a hashtag.</p>
 
 <p>For now, you'll have to spin up a signature server, used to sign requests to
-the Tiktok API. See <a href="https://github.com/kandayo/tiktok-passport"><strong>TikTok Passport</strong></a>.</p>
+the Tiktok API.</p>
+
+<p>See <a href="https://github.com/kandayo/tiktok-passport"><strong>TikTok Passport</strong></a>.</p>
 
 <h2><a id="index" class="anchor" href="#index">
   <svg class="octicon-link" aria-hidden="true">
